News UAT/force-app/main/default/objects/NXX2_Config_For_Data_Migration__mdt/NXX2_Config_For_Data_Migration__mdt.object-meta.xml
<CustomObject>
    <description>Required configuration for data migration from existing X2 portal.</description>
    <label>NXX2 Config For Data Migration</label>
    <pluralLabel>NXX2 Configs For Data Migration</pluralLabel>
</CustomObject>