News UAT/force-app/main/default/objects/NXX2_Config_For_Data_Migration__mdt/fields/Doing_Testing__c.field-meta.xml
<CustomField>
    <fullName>Doing_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doing Testing</label>
    <type>Checkbox</type>
</CustomField>