News UAT/force-app/main/default/objects/NXX2_Config_For_Data_Migration__mdt/fields/Proof_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Proof_Folder_Id__c</fullName>
    <label>Proof Folder Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>