News UAT/force-app/main/default/objects/NXX2_Config_For_Data_Migration__mdt/fields/Team_Drive_Parent_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Drive_Parent_Folder_Id__c</fullName>
    <label>Team Drive Parent Folder Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>